# robo-viewer

./: .bazelrc  .clangd  .gitignore  AGENTS.md  BATTERY_TESTS.md  BUILD  CODE_AUDIT.md  CONFIG.md  DOCS.md  GEMINI.md  Icosahedron Construction  MICROBOARD.md  MODULE.bazel  ODE2VAE_ANALYSIS.md  PRIMALPHA_IMPLEMENTATION.md  README.md  RL_TECH_STACK.md  SPAN_ARCHITECTURE.md  SPS_FIXED.md  SPS_OPTIMIZATIONS.md  STATUS.md  TD3_FIXES.md  TD3_FIXES_COMPLETE.md  TRAINING_UPDATES_ANALYSIS.md  animate_shape.py  battery_comparison_fix.txt  battery_methods.txt  battery_panel_fix.txt  bug_report.md  build_and_run.sh  build_and_run_utility.sh  build_explain  build_microboard.sh  bulletproof_viewer  codebase_snapshot_current.txt  completion.bash  completion.zsh  config_debug.yaml  custom_codebase_backup.txt  damage_problem_report.txt  (+32 more)
.ai/mcp/: mcp.json
bazel-micro_board/: ttf-bitstream-vera
config/: game_config.json
debug_room_viewer/: BUILD  main.cpp
kilo-code/: agent.json
menagerie/: humanoid.xml
patches/: BUILD  jolt_job_system_threads.patch
random_robot_demo/: BUILD  main.cpp
random_room_demo/: BUILD  main.cpp
robot_demo/: BUILD  main.cpp
robots/: BUILD  combat_bot.json  f22.json  internal_bot.json  test_bot.json
room_demo/: BUILD  main.cpp
sphere_demo/: BUILD  main.cpp
src/: Aircraft.cpp  Aircraft.h  AircraftEnv.cpp  AircraftEnv.h  AlignedAllocator.h  ArmaEigenUtils.h  AttentionEncoder.cpp  AttentionEncoder.h  BUILD  BatterySystem.h  CombatEnv.cpp  CombatEnv.h  CombatRobot.cpp  CombatRobot.h  Config.cpp  Config.h  InternalRobot.cpp  InternalRobot.h  IntrinsicMotivation.cpp  IntrinsicMotivation.h  LatentMemory.cpp  LatentMemory.h  LockFreeQueue.h  NeuralMath.cpp  NeuralMath.h  NeuralNetwork.cpp  NeuralNetwork.h  OpponentPool.cpp  OpponentPool.h  OverlayUI.cpp  OverlayUI.h  OverlayUI_refactor.cpp  OverlayUI_refactor.h  PhysicsCore.cpp  PhysicsCore.h  Renderer.cpp  Renderer.h  RobotLoader.cpp  RobotLoader.h  SpanNetwork.cpp  (+34 more)
tenacious-debugger/: SKILL.md
