module(
    name = "robo_viewer",
    version = "1.0.0",
)

# --- Core Dependencies ---
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

# --- Graphics & Math Stack (Native BCR) ---
bazel_dep(name = "glfw", version = "3.4.0")
bazel_dep(name = "glm", version = "1.0.1")
bazel_dep(name = "glew", version = "2.2.0")
bazel_dep(name = "nlohmann_json", version = "3.11.3")
bazel_dep(name = "imgui", version = "1.92.2")

# --- clangd Integration (Compilation Database Generator) ---
# hedron_compile_commands is not in BCR and has no releases, using latest commit
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "hedron_compile_commands",
    url = "https://github.com/hedronvision/bazel-compile-commands-extractor/archive/abb61a688167623088f8768cc9264798df6a9d10.tar.gz",
    strip_prefix = "bazel-compile-commands-extractor-abb61a688167623088f8768cc9264798df6a9d10",
    sha256 = "1b08abffbfbe89f6dbee6a5b33753792e8004f6a36f37c0f72115bec86e68724",
)

# --- External Physics Engine (Jolt) ---
http_archive(
    name = "jolt",
    build_file = "@//third_party:jolt.BUILD",
    sha256 = "5231953d1b1d5b9cb617facf86341a11337e1cd04456949af6911b917a1646cb",
    strip_prefix = "JoltPhysics-5.0.0",
    url = "https://github.com/jrouwe/JoltPhysics/archive/refs/tags/v5.0.0.tar.gz",
    patches = ["@//patches:jolt_job_system_threads.patch"],
    patch_args = ["-p1"],
)

# --- Morphologica for visualization ---
http_archive(
    name = "morphologica",
    build_file = "@//third_party:morphologica.BUILD",
    sha256 = "8dbd93433cca4355e4eb75f99778d0806de3d2693217ed811a7a516b23e3510d",
    strip_prefix = "morphologica-4.1",
    url = "https://github.com/ABRG-Models/morphologica/archive/refs/tags/v4.1.tar.gz",
)
